# Toy_Diskgeofitter

./: .gitignore  README.md  pyproject.toml
example/: basic_disk_fitting_example.ipynb
toydiskgeofitter/: __init__.py  config.py  fitting.py  geometry.py  io.py  likelihoods.py  models.py  pipeline.py  plotting.py  profiling.py  utils.py
